# JARVIS-OS

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/brain/: brain.py  context.py  intent_classifier.py  memory_rules.py  orchestrator.py  planner.py
app/context/: assembler.py  builder.py  manager.py  models.py  prompt_builder.py  providers.py
app/conversation/: history.py  manager.py  models.py
app/core/: config.py  container.py  handler_registry.py  lifespan.py  logger.py
app/handlers/: browser_handler.py  chat_handler.py  memory_handler.py  profile_handler.py  tool_handler.py
app/knowledge/: api.py  collector.py  extractor.py  graph.py  manager.py  models.py  serializer.py  storage.py
app/language/: intents.py  matcher.py  normalizer.py  synonyms.py
app/memory/: extractor.py  facts.py  intelligence.py  intent.py  intent_analyzer.py  keyword_intent_analyzer.py  long_term.py  manager.py  models.py  pipeline.py  registry.py  retriever.py  short_term.py
app/models/: manager.py  ollama_client.py
app/profile/: manager.py  models.py  projects.py  synchronizer.py
app/prompt/: builder.py  manager.py  strategy.py  templates.py  types.py
app/reasoning/: engine.py  models.py  rules.py
app/reflection/: engine.py  evaluator.py  models.py
app/response/: cleaner.py  formatter.py  manager.py  models.py  (+1 more)
docs/: 04_CognitiveMemory.md  05_Ubiquitous_Language.md  06_Architectural_Invariants.md  07_ComponentContracts.md  08_UbiquitousLanguage.md  Documentation_Structure.md  FOUNDING.md  RFC-0001-Knowledge-Engine.md
(+75 files in other folders)
