[project]
name = "jarvis-os"
version = "0.1.0"
description = "JARVIS-OS - Intelligent Personal AI Assistant"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "OlsanTech" }
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-cov>=6.2",
    "ruff>=0.12",
    "pyright>=1.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
[tool.setuptools.packages.find]
include = ["app*"]
exclude = [
    "tests*",
    "docker*",
    "knowledge*",
]